--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
     "dropzone": "5.9.3",
     "express": "^4.18.2",
     "flatpickr": "4.6.13",
     "formik": "2.2.9",
     "html-react-parser": "1.4.14",
     "leaflet": "1.8.0",
+    "nodemon": "^2.0.20",
     "prop-types": "15.8.1",
     "react": ">=16.8.0",
     "react-chartjs-2": "3.0.4",
@@ -58,6 +60,7 @@
     "react-scripts": "5.0.1",
     "react-select": "5.3.2",
     "react-table": "7.8.0",
+    "request": "^2.88.2",
     "stylis": "4.1.1",
     "stylis-plugin-rtl": "2.1.1",
     "sweetalert2": "11.4.17",
