--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chroma-js": "2.4.2",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "dropzone": "5.9.3",
     "express": "^4.18.2",
     "flatpickr": "4.6.13",
